# FinAgent

./: .gitignore  EVALUATION.md  README.md  SETUP.md  sample_evaluation copy.csv  sample_evaluation.csv  start.sh
backend/: .env.example  README.md  pyproject.toml  run.sh  sample_evaluation.csv  setup.sh
backend/app/: config.py  database.py  enums.py  main.py
backend/app/api/routes/: analytics.py  chat.py  conversations.py  evaluations.py  sse.py
backend/app/core/: sse_manager.py
backend/app/models/: __init__.py  conversation.py  evaluation.py  message.py  tool_execution.py
backend/app/prompts/: faithfulness_judge.j2  fin_react_agent.j2  prompt_utils.py
backend/app/schemas/: agent_response.py  analytics.py  conversation.py  evaluation.py  message.py
backend/app/services/: agent_service.py  conversation_service.py  evaluation_metrics.py  evaluation_service.py  openai_service.py
backend/app/tools/: __init__.py  base.py  calculator.py  company_info.py  financial_ratios.py  stock_price.py  stock_returns.py
backend/app/utils/: __init__.py  csv_parser.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  StatusIndicator.tsx  ThinkingStep.tsx
frontend/src/hooks/: useEvaluationSSE.ts  useSSE.ts
frontend/src/pages/: EvaluationPage.tsx
frontend/src/services/: api.ts  chatService.ts  evaluationService.ts
frontend/src/styles/: globals.css
frontend/src/types/: evaluation.ts  index.ts
(+5 files in other folders)
